minor toolTip z-index bug

--- a/src/components/backOfficeComponents/backOfficeModal/backOfficeModal.module.css
+++ b/src/components/backOfficeComponents/backOfficeModal/backOfficeModal.module.css
@@ -12,6 +12,7 @@
     visibility: hidden;
      opacity: 0;
     transition: visibility 0s linear 500ms, opacity 500ms;
+    z-index: 1000;
 }
   
   ._modal {
